feat: letting admins patching scooters via rest endpoint
next step: scooters will be able to update themselves via rabbitmq messages
