# kernel/documentation/generated/openapi.json
@@ -148,6 +148,69 @@
           "SecurityScheme" : [ ]
         } ]
       }
+    },
+    "/scooter/{id}" : {
+      "patch" : {
+        "tags" : [ "Scooter" ],
+        "summary" : "Patch a scooter",
+        "description" : "Patch a scooter",
+        "operationId" : "patchLicense",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/UUID"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/ScooterPatchDTO"
+              },
+              "examples" : {
+                "Patch a scooter" : {
+                  "description" : "Patch a scooter.",
+                  "value" : {
+                    "batteryLevel" : "99,999",
+                    "location" : {
+                      "latitude" : "59.334591",
+                      "longitude" : "18.063240"
+                    },
+                    "status" : "IN_USE"
+                  }
+                }
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ScooterDTO"
+                }
+              }
+            }
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          }
+        },
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
     }
   },
   "components" : {
@@ -238,6 +301,23 @@
           },
           "locationDTO" : {
             "$ref" : "#/components/schemas/LocationDTO"
+          },
+          "status" : {
+            "type" : "string"
+          }
+        }
+      },
+      "ScooterPatchDTO" : {
+        "type" : "object",
+        "properties" : {
+          "batteryLevel" : {
+            "type" : "number"
+          },
+          "location" : {
+            "$ref" : "#/components/schemas/LocationDTO"
+          },
+          "status" : {
+            "type" : "string"
           }
         }
       },
