# kernel/src/main/java/dto/ScooterPatchDTO.java
@@ -1,0 +1,10 @@
+package dto;
+
+import java.math.BigDecimal;
+
+public record ScooterPatchDTO(
+        BigDecimal batteryLevel,
+        LocationDTO location,
+        String status) {
+
+}
